# synaptik-core

./: .gitignore  Cargo.toml  LICENSE  README.md  cogniv.sh
.cogniv/objects/: 114cded9-f3ef-4bef-9d19-10c2d36b2a59.txt
.github/workflows/: ci.yml  contracts-pack.yml
artifacts/: replaylog.md
demo/: MVP.py  MVP_groq_responses.py  __init__.py  actions.py  demo.py  flows.py  intents.py  llm_client.py  memory_bridge.py  path_utils.py  prompts.py  requirements.txt  test.py  test_prompts_syn.txt  tmp_check_demo.py  ui.py
demo/prompts/: __init__.py  examples.md  memory.md  prompts.py  routing.toml  safety.toml  schema.toml  startup.md  system_header.md
deploy/: install-synaptik-agent.sh
deploy/systemd/: synaptik-agent.service  synaptik-agent.timer
src/: main.rs
synaptik-workspace/: Cargo.toml
synaptik-workspace/contracts/: Cargo.toml  nonviolence.toml
synaptik-workspace/contracts-signer/: Cargo.toml
synaptik-workspace/contracts-signer/src/: main.rs
synaptik-workspace/contracts/assets/: nonviolence.toml
synaptik-workspace/contracts/src/: api.rs  assets.rs  capsule.rs  evaluator.rs  lib.rs  normalize.rs  patch.rs  sandbox.rs  store.rs  types.rs
synaptik-workspace/contracts/tests/: evaluator_tests.rs  simcapsule_tests.rs  uuidv7_tests.rs
synaptik-workspace/examples/: synaptik-agent.toml  trust.toml
synaptik-workspace/examples/registry/: registry.jsonl
synaptik-workspace/synaptik-admin/: Cargo.toml
synaptik-workspace/synaptik-admin/src/: main.rs
synaptik-workspace/synaptik-agent/: Cargo.toml
synaptik-workspace/synaptik-agent/src/: main.rs
synaptik-workspace/synaptik-core/: Cargo.toml
synaptik-workspace/synaptik-core-py/: Cargo.toml  Makefile  README.md  pyproject.toml
synaptik-workspace/synaptik-core-py/src/: lib.rs  py_commands.rs  py_helpers.rs  py_streamgate.rs
synaptik-workspace/synaptik-core-py/tests/: large_int_json.py  smoke.py
synaptik-workspace/synaptik-core/.cogniv/: config.toml  logbook.jsonl
synaptik-workspace/synaptik-core/.cogniv/cache/: memory.db
synaptik-workspace/synaptik-core/.cogniv/contracts/: base_ethics.toml
synaptik-workspace/synaptik-core/.cogniv/logbook/: actions.jsonl  contracts.jsonl  ethics.jsonl
synaptik-workspace/synaptik-core/benches/: load_ingest.rs
synaptik-workspace/synaptik-core/example/: mvp.rs
synaptik-workspace/synaptik-core/src/: config.rs  lib.rs
synaptik-workspace/synaptik-core/src/commands/: api.rs  bind.rs  contracts.rs  helpers.rs  init.rs  mod.rs  pons.rs  recall.rs  replay.rs
synaptik-workspace/synaptik-core/src/memory/: dag.rs
synaptik-workspace/synaptik-core/src/services/: archivist.rs  audit.rs  compactor.rs  ethos.rs  learner.rs  librarian.rs  lobes.rs  masking.rs  memory.rs  mod.rs  reward.rs  streamgate.rs
synaptik-workspace/synaptik-core/src/utils/: logbook.rs  mod.rs  path.rs  pons.rs
synaptik-workspace/synaptik-core/tests/: bind_tests.rs  e2e_test.rs  learner_tests.rs  masking_tests.rs  replay_flow.rs  runtime_tests.rs  streamgate_tests.rs
