[package]
name = "synaptik-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
flate2 = "1.0.34"                                # compression
thiserror = "1.0.38"                             # error handling
uuid = { version = "1", features = ["v4"] }