[package]
name = "synaptik-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
blake3 = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
glob = "0.3"
thiserror = "1"
synaptik-core = { path = "../synaptik-core" }
whoami = "1"
toml_edit = "0.22"
contracts = { path = "../contracts" }
uuid = { version = "1", features = ["v4"] }
