[package]
name = "synaptik-core"
version = "0.1.0"
edition = "2024"
description = "Synaptik-Core: A lightweight cognitive memory and ethics engine for agentic AI — persistent recall, auditable ethics, and modular design for trustworthy, context-aware agents."
authors = ["Janay <janayharris@synaptik-core.dev>"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow      = "1.0.86"
serde       = { version = "1.0.208", features = ["derive"] }
serde_json  = "1.0.124"
toml        = "0.8.19"
rusqlite    = { version = "0.31", features = ["bundled"] }
blake3      = "1.5.0"
chrono      = { version = "0.4", features = ["serde"] }
contracts   = { path = "../contracts" }
once_cell             = "1.19"
reqwest = { version = "0.11", features = ["json", "multipart"] }
summary = "0.1.0"
